Polishing and fixes

--- a/ui/app/views/plant-details.html
+++ b/ui/app/views/plant-details.html
@@ -41,7 +41,6 @@
 </div>
 
 <h2>Pictures</h2>
-
 <div class="row" ng-show="images">
 	<div class="col-md-12">
 		<div masonry>
@@ -53,7 +52,7 @@
 	</div>
 </div>
 
-<div class="row" ng-hide="images">
+<div class="row" ng-hide="!images">
 	<div class="col-md-12">
 		No images available.
 	</div>
