--- a/src/main/resources/public/views/garden.html
+++ b/src/main/resources/public/views/garden.html
@@ -1,1 +1,1 @@
-<h1>Garden</h1> <table class="table table-striped table-hover"> <thead> <th>Name <th>City  <tbody> <tr ng-repeat="store in stores"> <td>{{garden.name}} <td>{{garden.address.city}}   </table>
+<h1>Garden Pictures</h1> <div class="row" ng-show="images"> <div class="col-md-12"> <div masonry> <div class="masonry-brick" ng-repeat="plantImage in images"> <img ng-src="data:image/PNG;base64,{{plantImage.image}}" width="330px" style="margin: 5px" title="{{plantImage.name}}"> </div> </div> </div> </div>
