--- a/ui/app/views/about.html
+++ b/ui/app/views/about.html
@@ -2,3 +2,5 @@
 
 <p>You can find the source code at:</p>
 <p><a href="https://github.com/ghillert/botanic-ng">https://github.com/ghillert/botanic-ng</a></p>
+
+<p>{{message}}</p>
