--- a/ui/app/views/garden.html
+++ b/ui/app/views/garden.html
@@ -1,15 +1,14 @@
 
-<h1>Garden</h1>
+<h1>Garden Pictures</h1>
 
-<table class="table table-striped table-hover">
-  <thead>
-    <th>Name</th>
-    <th>City</th>
-  </thead>
-  <tbody>
-    <tr ng-repeat="store in stores">
-      <td>{{garden.name}}</td>
-      <td>{{garden.address.city}}</td>
-    </tr>
-  </tbody>
-</table>
+<div class="row" ng-show="images">
+	<div class="col-md-12">
+		<div masonry>
+			<div class="masonry-brick" ng-repeat="plantImage in images">
+				<img ng-src="data:image/PNG;base64,{{plantImage.image}}" width="330px"
+				style="margin: 5px;" title="{{plantImage.name}}"/>
+			</div>
+		</div>
+	</div>
+</div>
+
