--- a/ui/app/views/plant-details.html
+++ b/ui/app/views/plant-details.html
@@ -1,18 +1,18 @@
-        <style>
-            .my-drop-zone { border: dotted 2px lightgray; }
-            .nv-file-over { border: dotted 2px red; } /* Default class applied to drop zones on over */
-            .another-file-over-class { border: dotted 3px green; }
+<style>
+	.my-drop-zone { border: dotted 2px lightgray; }
+	.nv-file-over { border: dotted 2px red; } /* Default class applied to drop zones on over */
+	.another-file-over-class { border: dotted 3px green; }
 
-/*             canvas.upload {
-                background-color: #f3f3f3;
-                -webkit-box-shadow: 3px 3px 3px 0 #e3e3e3;
-                -moz-box-shadow: 3px 3px 3px 0 #e3e3e3;
-                box-shadow: 3px 3px 3px 0 #e3e3e3;
-                border: 1px solid #c3c3c3;
-                height: 100px;
-                margin: 6px 0 0 6px;
-            } */
-        </style>
+/* canvas.upload {
+	background-color: #f3f3f3;
+	-webkit-box-shadow: 3px 3px 3px 0 #e3e3e3;
+	-moz-box-shadow: 3px 3px 3px 0 #e3e3e3;
+	box-shadow: 3px 3px 3px 0 #e3e3e3;
+	border: 1px solid #c3c3c3;
+	height: 100px;
+	margin: 6px 0 0 6px;
+} */
+</style>
 
 
 <h1>Plant Details</h1>
@@ -26,6 +26,10 @@
 		<div class="row">
 			<div class="col-md-3"><strong>Species</strong></div>
 			<div class="col-md-9">{{plant.species}}</div>
+		</div>
+		<div class="row">
+			<div class="col-md-3"><strong>Created</strong></div>
+			<div class="col-md-9">{{plant.createdDate}}</div>
 		</div>
 		<div class="row">
 			<div class="col-md-3"><strong>Location</strong></div>
