Convert to `webpack` and `NPM`

--- a/ui/src/styles/main.less
+++ b/ui/src/styles/main.less
@@ -1,3 +1,5 @@
+@import "~bootstrap/less/bootstrap.less";
+
 @import "typography.less";
 @import "header.less";
 
@@ -30,8 +32,6 @@
 @btn-default-color:              @spring-light-grey;
 @btn-default-bg:                 @botanic-dark-green;
 @btn-default-border:             @botanic-light-green;
-
-@icon-font-path: "../fonts/bootstrap/";
 
 @nav-tabs-active-link-hover-color:        @spring-light-grey;
 @nav-tabs-active-link-hover-bg:           @botanic-dark-green;
